Opened 16 years ago
Closed 16 years ago
#3896 closed bug (fixed)
[DeskCalc] initial window is too small
Reported by: | diver | Owned by: | stpere |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/DeskCalc | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Change History (2)
comment:1 by , 16 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Note:
See TracTickets
for help on using tickets.
Hi, this is fixed in hrev30679. The window was resized to the size of the dragger :) The frame variable was wrongly re-used. Thanks!