Fixed the initial size of the DeskCalc window.

For some reason, it was resizing the window to the size of the dragger frame :-) (the frame variable was reused to a different purpose)

Fixes ticket #3896


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30679 a95241bf-73f2-0310-859d-f6bbb57e9c96